// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaCheckbox default 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-checkbox">
  <div tabindex="-1" class="va-checkbox__input-container">
    <div class="va-checkbox__square"><input type="checkbox" role="checkbox" readonly="readonly" class="va-checkbox__input">
      <va-icon-stub color="" size="20px" sizesconfig="[object Object]" fontsizesconfig="[object Object]" name="check" iconsconfig="[object Object]" tag="i" rotation="" class="va-checkbox__icon"></va-icon-stub>
    </div>
    <div tabindex="-1" class="va-checkbox__label">

    </div>
  </div>
</va-input-wrapper-stub>
`;

exports[`VaCheckbox true value 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-checkbox va-checkbox--selected">
  <div tabindex="-1" class="va-checkbox__input-container">
    <div class="va-checkbox__square" style="background: rgb(0, 0, 0); border-color: #000000;"><input type="checkbox" role="checkbox" readonly="readonly" class="va-checkbox__input">
      <va-icon-stub color="" size="20px" sizesconfig="[object Object]" fontsizesconfig="[object Object]" name="check" iconsconfig="[object Object]" tag="i" rotation="" class="va-checkbox__icon"></va-icon-stub>
    </div>
    <div tabindex="-1" class="va-checkbox__label">

    </div>
  </div>
</va-input-wrapper-stub>
`;
